# dev-container

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  foundry.toml
.claude/: TODO.md
.claude/mcp-servers/knowledge-base/: Cargo.toml  run.sh
.claude/mcp-servers/knowledge-base/src/: curate.rs  fingerprint.rs  lib.rs  main.rs  query.rs  raw.rs  server.rs  store.rs  types.rs
.claude/mcp-servers/solodit/: Cargo.toml  run.sh
.claude/mcp-servers/solodit/src/: client.rs  main.rs  server.rs
.claude/mcp-servers/static-analysis/: Cargo.toml  run.sh
.claude/mcp-servers/static-analysis/src/: lib.rs  main.rs  normalize.rs  runner.rs  server.rs  types.rs
.claude/mcp-servers/static-analysis/tests/: integration.rs
.claude/plugins/sec-audit/.claude-plugin/: plugin.json
.claude/plugins/sec-audit/agents/: architect-p2.md  architect.md  consolidator.md  discuss.md  falsification.md  feedback.md  fuzz-engineer.md  heuristics.md  maturity.md  report-generator.md  specialist.md  storage-safety.md  triage.md
.claude/plugins/sec-audit/skills/audit-review/: SKILL.md
.claude/plugins/sec-audit/skills/audit-start/: SKILL.md
.claude/plugins/sec-audit/skills/poc/: SKILL.md
.claude/plugins/sec-audit/skills/review-contract/: SKILL.md
.claude/rules/: best-practices.md  guardrails.md  testing.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
test/: Base.t.sol
