[package]
name = "solodit-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "1.1", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
